# scrz

./: .gitignore  .travis.yml  scrz.cabal
examples/: Scrzfile  Scrzfile2
script/: bootstrap  build  console  create-arch-image  create-ubuntu-12.04-image  create-ubuntu-13.10-image  create-ubuntu-14.04-image  create-ubuntu-14.10-image  install  scrz-coreos-installer  setup-host  systemd-os-image-manifest-template
src/Main/: ScrzContainerSupervisor.hs  ScrzNodeSupervisor.hs
src/Scrz/: Aeson.hs  Btrfs.hs  Commands.hs  Container.hs  Etcd.hs  Host.hs  Http.hs  Image.hs  LXC.hs  Log.hs  Main.hs  Network.hs  Protocol.hs  Proxy.hs  Scrzfile.hs  Socket.hs  Supervisor.hs  TH.hs  Types.hs  Utils.hs  Volume.hs
systemd/: scrz-container-supervisor@.service  scrz-node-supervisor.service
